--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "element-ui": "^2.13.2",
     "emailjs-com": "^2.4.1",
     "filepond": "^4.18.0",
+    "https-localhost": "^4.7.1",
     "mapbox-gl": "^0.53.1",
     "register-service-worker": "^1.5.2",
     "sweetalert2": "^11.11.0",
