--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-upload-component": "^2.8.20",
     "vue2-transitions": "^0.2.3",
     "vuejs-dialog": "^1.4.1",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
